# Oakland-Data

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
.cursor/: mcp.json
api/: index.py
eval/: README.md
eval/configs/: oakland-baseline.yaml  oakland-codemode.yaml
eval/prompts/: oakland_baseline.md  oakland_codemode.md
eval/runner/: judge.py  report.py  run_eval.py
eval/test_sets/: oakland_eval.jsonl
oakland_mcp/: config.py  http_server.py  sandbox.py  server.py  socrata.py  tools.py
oakland_mcp/runtime/: README.md  __init__.py  oakland.py
tests/: conftest.py  test_tools.py
webapp/: app.py  logger.py
webapp/static/: index.html
